infrastructure/kubernetes/manifests/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: pezhwan-mongo
  namespace: pezhwan
  labels:
    app.kubernetes.io/name: pezhwan
    app.kubernetes.io/component: mongodb
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: pezhwan
    app.kubernetes.io/component: mongodb
  ports:
    - port: 27017
      targetPort: mongodb
      name: mongodb
