infrastructure/kubernetes/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pezhwan-identity-server
  namespace: pezhwan
  labels:
    app.kubernetes.io/name: pezhwan
    app.kubernetes.io/component: identity-server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pezhwan
      app.kubernetes.io/component: identity-server
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 4011
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: pezhwan
              app.kubernetes.io/component: mongodb
      ports:
        - port: 27017
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: pezhwan
              app.kubernetes.io/component: redis
      ports:
        - port: 6379
          protocol: TCP
    - to: [] # allow DNS resolution
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
